# avito-internship-task-qa

./: README.md
task1/: Баг-репорт для страницы Авито с результатами поиска.docx
task2/: README.md  TESTCASES.md  constants.py  pyproject.toml  test_eco_impact.py
